# cgm_toolkit

./: LICENSE.rst  README.md  cgm_profiles.py  emis_band_050_200_CIE.txt  etable.hdf5  etable_05_2keV_cnts.hdf5  etable_erosita.hdf5  example.ipynb  ion_frac.py  pyproject.toml  requirements.txt  setup.py  xray_emissivity.py
cgm_toolkit/: __init__.py  _version.py  cgm_profiles.py  ion_frac.py  xray_emissivity.py
data/: Te_m50012.txt  cool_eff_CIE.txt  emis_band_050_125_CIE.txt  etable.hdf5  etable_001_05keV.hdf5  etable_001_05keV_cnts.hdf5  etable_001_12keV.hdf5  etable_001_12keV_cnts.hdf5  etable_05_2keV.hdf5  etable_05_2keV_cnts.hdf5  etable_erosita_cnts.hdf5  etable_erosita_cts.hdf5  ion_frac_CIE.txt  ne_m50012.txt
notebooks/: example.ipynb  ion_frac_test.ipynb
responses/: arf01_200nmAl_sdtq.fits  rmf01_sdtq.fits
src/: cgm_profiles.py  ion_frac.py  xray_emissivity.py
src/cgm_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
